fixed z-index of animation in home component

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -26,7 +26,7 @@
         justify-content: space-between;
         background-color: var(--clr3);
         flex-wrap: nowrap;
-        z-index: 1;
+        z-index: 5;
     }
 
     .div-logo{
@@ -58,7 +58,7 @@
         justify-content: space-between;
         background-color: var(--clr3);
         flex-wrap: nowrap;
-        z-index: 1;
+        z-index: 5;
     }
 
     .div-logo{
@@ -90,7 +90,7 @@
         justify-content: space-between;
         background-color: var(--clr3);
         flex-wrap: nowrap;
-        z-index: 1;
+        z-index: 5;
     }
 
     .div-logo{
